2006-04-10  Tom Tromey  <tromey@redhat.com>

	* javax/accessibility/AccessibleTextSequence.java: New file.
	* javax/accessibility/AccessibleRelation.java (CHILD_NODE_OF): New
	field.
	(CHILD_NODE_OF_PROPERTY, EMBEDDED_BY, EMBEDDED_BY_PROPERTY, EMBEDS,
	EMBEDS_PROPERTY, FLOWS_FROM, FLOWS_FROM_PROPERTY, FLOWS_TO,
	FLOWS_TO_PROPERTY, PARENT_WINDOW_OF, PARENT_WINDOW_OF_PROPERTY,
	SUBWINDOW_OF, SUBWINDOW_OF_PROPERTY): Likewise.
	* javax/accessibility/AccessibleExtendedText.java: New file.
	* javax/accessibility/AccessibleContext.java
	(ACCESSIBLE_COMPONENT_BOUNDS_CHANGED): New field.
	(ACCESSIBLE_INVALIDATE_CHILDREN): Likewise.
	(ACCESSIBLE_TEXT_ATTRIBUTES_CHANGED): Likewise.
	* javax/accessibility/AccessibleAttributeSequence.java: New file.
	* javax/accessibility/AccessibleStreamable.java: New file.
	* javax/accessibility/AccessibleText.java (getIndexAtPoint): Javadoc
	fix.

2006-04-10  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* javax/swing/tree/AbstractLayoutCache.java 
	(getNodeDimensions, getRowsForPath): Implemented.
	* javax/swing/tree/FixedHeightLayoutCache.java: Rewritten.
	* javax/swing/tree/VariableHeightLayoutCache.java: Rewritten.

2006-04-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/tree/AbstractLayoutCache.java: Reformatted.

2006-04-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JInternalFrame.java
	(AccessibleJInternalFrame): Marked all stubbed methods as such
	by adding throws NotImplementedException.

2006-04-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JFileChooser.java
	(getAccessibleContext): Don't create a new instance on each
	call, instead store the accessible context in the
	accessibleContext field.

2006-04-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComboBox.java
	(AccessibleJComboBox): Marked all stubbed methods as such
	by adding throws NotImplementedException.

2006-04-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/ActionMap.java
	(readObject): Removed.
	(writeObject): Removed.
